[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elc-invoice-engine-cli"
version = "0.1.4"
description = "CLI client for ELC Invoice Engine V2 API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["invoice", "elc", "cli", "kingdee"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "typer==0.9.4",
    "click==8.1.7",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "rich==13.7.1",
    "lxml==5.3.0",
    "openpyxl==3.1.5",
]

[project.scripts]
elc = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
